force-app/main/default/objects/SmartIntake_Hook__mdt/SmartIntake_Hook__mdt.object-meta.xml
<CustomObject>
    <description>Metadata-driven extension hooks that let subscriber admins call Flow or Apex after SmartIntake runtime events without changing the packaged agent instructions.</description>
    <label>SmartIntake Hook</label>
    <pluralLabel>SmartIntake Hooks</pluralLabel>
</CustomObject>