force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Answers_JSON_Output_Variable__c.field-meta.xml
<CustomField>
    <fullName>Answers_JSON_Output_Variable__c</fullName>
    <description>Flow output variable name containing updated answers JSON. Defaults to updatedAnswersJson.</description>
    <label>Answers JSON Output Variable</label>
    <length>80</length>
    <type>Text</type>
</CustomField>