force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Block_Continue_Output_Variable__c.field-meta.xml
<CustomField>
    <fullName>Block_Continue_Output_Variable__c</fullName>
    <description>Flow output variable name that returns true when SmartIntake should pause on the current question. Defaults to blockContinue.</description>
    <label>Block Continue Output Variable</label>
    <length>80</length>
    <type>Text</type>
</CustomField>