force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Runtime event that triggers this hook. AFTER_ANSWER runs after SmartIntake validates and stores the answer, before it selects the next question.</description>
    <label>Event</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>