force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <description>API name of the active autolaunched Flow to run when Handler Type is FLOW.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>