force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Flow_Input_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Flow_Input_Mappings__c</fullName>
    <description>Optional admin-friendly mapping from Flow input variable names to SmartIntake answer or context keys.</description>
    <inlineHelpText>Map Flow inputs as FlowInputVariable &lt;- SmartIntakeKey, for example serialNumber &lt;- answerValue.</inlineHelpText>
    <label>Flow Input Mappings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>