force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Flow_Output_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Flow_Output_Mappings__c</fullName>
    <description>Admin-friendly Flow output mappings. Enter one mapping per line, such as matchedProducts -&gt; PRODUCT_RESULTS.</description>
    <label>Flow Output Mappings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>