force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Handler_Type__c.field-meta.xml
<CustomField>
    <fullName>Handler_Type__c</fullName>
    <description>Extension mechanism for the hook. FLOW is supported in the runtime MVP.</description>
    <label>Handler Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>