force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Hook_Key__c.field-meta.xml
<CustomField>
    <fullName>Hook_Key__c</fullName>
    <label>Hook Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>