force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Next_Question_Output_Variable__c.field-meta.xml
<CustomField>
    <fullName>Next_Question_Output_Variable__c</fullName>
    <description>Flow output variable name containing the next SmartIntake question key. Defaults to nextQuestionKey.</description>
    <label>Next Question Output Variable</label>
    <length>80</length>
    <type>Text</type>
</CustomField>