force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Output_Mode__c.field-meta.xml
<CustomField>
    <fullName>Output_Mode__c</fullName>
    <description>Determines whether Flow outputs are stored through admin-friendly mappings or through the advanced updated answers JSON override.</description>
    <label>Output Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>