force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Question_Key__c</fullName>
    <description>Question key that triggers this hook.</description>
    <label>Question Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>