force-app/main/default/objects/SmartIntake_Hook__mdt/fields/Success_Output_Variable__c.field-meta.xml
<CustomField>
    <fullName>Success_Output_Variable__c</fullName>
    <description>Flow output variable name that returns true or false. Defaults to success.</description>
    <label>Success Output Variable</label>
    <length>80</length>
    <type>Text</type>
</CustomField>