force-app/main/default/objects/SmartIntake_Hook__mdt/fields/User_Message_Output_Variable__c.field-meta.xml
<CustomField>
    <fullName>User_Message_Output_Variable__c</fullName>
    <description>Flow output variable name containing an optional user-facing message. Defaults to userMessage.</description>
    <label>User Message Output Variable</label>
    <length>80</length>
    <type>Text</type>
</CustomField>